tests/invalid/sorted_unsupported_type/main.py
xs: list[list[int]] = [[3, 1], [2, 4]]
ys: list[list[int]] = sorted(xs)
